--- a/home.html
+++ b/home.html
@@ -10,7 +10,7 @@
    <div class="main">
     <h1 class="title">Chai Aur Hero sections</h1>
     <div class="btns">
-        <button class="button">Minimal Hero Sections</button>
+        <button class="button" onclick="location.href='btn1.html'">Minimal Hero Sections</button>
         <button class="button">Hero Section with Image</button>
     </div>
 
