--- a/btn1.html
+++ b/btn1.html
@@ -7,10 +7,12 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body class="firstpage">
-    <div> 
+    <div class="main"> 
         <button class="button1">New Features Available Now</button>
-        <div>
-            <h1>Now it's easier than ever to <br> build products</h1>
+        <div class="text">
+            <h1>Now it's easier than ever to</h1> 
+                <h1>build products</h1>
+            <h3>Create Stunning websites and applications with our Modern Design</h3>
         </div>
     </div>
 </body>
